# Cunning3D-Dev

./: .cursorignore  .gitignore  .gitmodules  BRIDGE_UNITY_UNREAL.md  Cargo.toml  README.md  build.rs  meta.json  project.c3d
.cargo/extra_node/demo_jitter/: Cargo.toml  nodespec.json
.cargo/extra_node/demo_jitter/src/: lib.rs
crates/cunning_core/: Cargo.toml
crates/cunning_core/schemas/: cunning_spline_snapshot.fbs
crates/cunning_core/src/: lib.rs  spline_snapshot_fbs.rs
crates/cunning_core/src/coord/: basis.rs  mod.rs
crates/cunning_core/src/io/: blob_store.rs
crates/cunning_core_ffi/: Cargo.toml
crates/cunning_core_ffi/src/: lib.rs
crates/cunning_explorer_command_injector/: Cargo.toml
crates/cunning_explorer_command_injector/src/: lib.rs
crates/cunning_grid_plane/: Cargo.toml
crates/cunning_grid_plane/src/: lib.rs
crates/cunning_overlay_widgets/: Cargo.toml
crates/cunning_overlay_widgets/src/: lib.rs
crates/cunning_overlay_widgets/src/overlay_widgets/: buttons.rs  display.rs  icons.rs  inputs.rs  layout.rs  mod.rs  palette.rs  style.rs
crates/cunning_player/: Cargo.toml  README_WASM.md
crates/cunning_player/scripts/: build_wasm.ps1
crates/cunning_player/src/: lib.rs  overlay_render.rs  protocol.rs  turntable.rs  wireframe.rs  worker.rs  worker_runtime.rs
crates/cunning_player/tests/: voxel_edit_internal_override.rs
crates/cunning_syntax/: Cargo.toml
crates/cunning_syntax/src/: lib.rs
crates/cunning_viewport/: Cargo.toml
crates/cunning_viewport/src/: camera.rs  camera_sync.rs  coverlay_dock.rs  hud.rs  icons.rs  input.rs  layout.rs  lib.rs  nav_input.rs  viewport_options.rs  viewport_ui.rs  voxel_coverlay_ui.rs
crates/cunning_viewport/src/grid/: grid_labels.rs  grid_params.rs  mod.rs
crates/cunning_voxel_faces/: Cargo.toml
crates/cunning_voxel_faces/src/: lib.rs
libs/gpui_deps/: Cargo.toml
libs/gpui_deps/clock/: Cargo.toml
libs/gpui_deps/collections/: Cargo.toml
libs/gpui_deps/gpui/: Cargo.toml
libs/gpui_deps/gpui/src/: platform.rs  window.rs
libs/gpui_deps/gpui/src/platform/windows/: window.rs
libs/gpui_deps/gpui_macros/: Cargo.toml
libs/gpui_deps/gpui_tokio/: Cargo.toml
libs/gpui_deps/http_client/: Cargo.toml
libs/gpui_deps/paths/: Cargo.toml
libs/gpui_deps/refineable/: Cargo.toml
libs/gpui_deps/refineable/derive_refineable/: Cargo.toml
libs/gpui_deps/rope/: Cargo.toml
libs/gpui_deps/scheduler/: Cargo.toml
libs/gpui_deps/sum_tree/: Cargo.toml
libs/gpui_deps/sum_tree/src/: cursor.rs  sum_tree.rs
libs/gpui_deps/text/: Cargo.toml
libs/gpui_deps/util/: Cargo.toml
libs/gpui_deps/util_macros/: Cargo.toml
libs/gpui_deps/util_macros/src/: util_macros.rs
src/cunning_ui/crates/cunning-wgpu-ui/: Cargo.toml  build.rs
src/cunning_ui/crates/cunning-wgpu-ui/src/: lib.rs
src/cunning_ui/crates/cunning-wgpu-ui/src/sdf/: circle.rs  curve.rs  dashed_curve.rs  ellipse.rs  flow_curve.rs  grid.rs  mod.rs  quad.rs  rect.rs  text.rs  tri.rs  ui_stats.rs
src/cunning_ui/crates/cunning_egui/: CHANGELOG.md  Cargo.toml  WHITEPAPER.md
src/cunning_ui/crates/cunning_egui/crates/bevy_egui-main/src/: input.rs
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy/examples/: ui.rs
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy/src/: egui_node.rs  holes.rs  lib.rs  render_systems.rs  systems.rs
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_demo/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_demo/src/: main.rs
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_dock/: CHANGELOG.md  Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_dock/src/: lib.rs  style.rs
src/cunning_ui/crates/cunning_egui/crates/cunning_egui_dock/src/widgets/: mod.rs  popup.rs
src/cunning_ui/crates/cunning_egui/crates/eframe/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/egui/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/egui-wgpu/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/egui-wgpu/src/: egui.wgsl  lib.rs  renderer.rs  winit.rs
src/cunning_ui/crates/cunning_egui/crates/egui-winit/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/egui-winit/src/: lib.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/: context.rs  debug_text.rs  drag_and_drop.rs  hit_test.rs  interaction.rs  layers.rs  menu.rs  plugin.rs  style.rs  viewport.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/containers/: area.rs  panel.rs  resize.rs  scene.rs  scroll_area.rs  window.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/data/: mod.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/input_state/: mod.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/memory/: mod.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/text_selection/: label_text_selection.rs
src/cunning_ui/crates/cunning_egui/crates/egui/src/widgets/: drag_value.rs  ladder.rs
src/cunning_ui/crates/cunning_egui/crates/egui_demo_app/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/egui_demo_app/src/: backend_panel.rs  wrap_app.rs
src/cunning_ui/crates/cunning_egui/crates/egui_demo_lib/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/egui_demo_lib/src/: cui.rs  lib.rs
src/cunning_ui/crates/cunning_egui/crates/egui_demo_lib/src/demo/: demo_app_windows.rs  pan_zoom.rs  table_demo.rs  toggle_switch.rs
src/cunning_ui/crates/cunning_egui/crates/egui_extras/src/: image.rs  layout.rs  lib.rs  section.rs
src/cunning_ui/crates/cunning_egui/crates/egui_glow/src/: painter.rs
src/cunning_ui/crates/cunning_egui/crates/egui_plot/src/: axis.rs  legend.rs  lib.rs
src/cunning_ui/crates/cunning_egui/crates/emath/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/emath/src/: smart_aim.rs
src/cunning_ui/crates/cunning_egui/crates/epaint/: Cargo.toml
src/cunning_ui/crates/cunning_egui/crates/epaint/src/: shape.rs
src/cunning_ui/crates/cunning_egui/crates/epaint/src/text/: font.rs  (+2 more)
src/cunning_ui/crates/cunning_egui/crates/wgpu-core-deps-emscripten/: Cargo.toml
(+700 files in other folders)
