[package]
name = "cunning_core_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cunning_core = { path = "../cunning_core" }
cunning_cda_runtime = { path = "../cunning_cda_runtime" }
once_cell = "1.19"
bevy = { path = "../../src/cunning_core/libs/3rd/bevy", default-features = false, features = ["3d"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }
dashmap = "6.1"
crossbeam-channel = "0.5"
zstd = "0.13.3"
zstd-safe = "7.2.4"
egui = { path = "../../src/cunning_ui/crates/cunning_egui/crates/egui" }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

