[package]
name = "cunning_explorer_command_injector"
version = "0.10.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
doctest = false

[features]
default = ["stable"]
stable = []
preview = []

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
] }
windows-core = "0.61"
windows-registry = "0.5"

