[package]
name = "cunning_grid_plane"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../../src/cunning_core/libs/3rd/bevy", default-features = false, features = ["3d"] }
bevy_image = { path = "../../src/cunning_core/libs/3rd/bevy/crates/bevy_image", default-features = false }
cunning_viewport = { path = "../cunning_viewport" }
bevy_egui = { path = "../../src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy", default-features = false, features = ["default_fonts", "render"] }
