[package]
name = "cunning_overlay_widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_egui = { path = "../../src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy", default-features = false, features = ["default_fonts", "render"] }
egui-wgpu = { path = "../../src/cunning_ui/crates/cunning_egui/crates/egui-wgpu" }
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1.19"