[package]
name = "cunning_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
bevy = { path = "../../src/cunning_core/libs/3rd/bevy", default-features = false, features = ["3d", "bevy_sprite", "webgpu"] }
bevy_egui = { path = "../../src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy", default-features = false, features = ["default_fonts", "render"] }
cunning_kernel = { package = "cunning_core", path = "../cunning_core" }
cunning_ui = { path = "../cunning_ui" }
cunning_viewport = { path = "../cunning_viewport" }
cunning_grid_plane = { path = "../cunning_grid_plane" }
cunning_voxel_faces = { path = "../cunning_voxel_faces" }
cunning_overlay_widgets = { path = "../cunning_overlay_widgets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_dock = { path = "../../src/cunning_ui/crates/cunning_egui/crates/cunning_egui_dock", features = ["serde"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Node", "HtmlInputElement", "FileList", "File", "Blob", "Url", "Location", "Performance", "Worker", "WorkerOptions", "WorkerType", "MessageEvent", "DedicatedWorkerGlobalScope", "Response", "Storage"] }
crossbeam-channel = "0.5"
cunning_cda_runtime = { path = "../cunning_cda_runtime" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bytemuck = "1"
uuid = { version = "1.8.0", features = ["v4", "v5", "serde", "js"] }