[package]
name = "cunning_syntax"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cunning3D shared syntax highlighting engine (tree-sitter, compiled-in languages)."

[dependencies]
once_cell = "1.19"
dashmap = "5.5"
tree-sitter = "0.26.3"
tree-sitter-highlight = "0.26.3"
tree-sitter-rust = "0.24.0"
tree-sitter-wgsl = { path = "../third_party/tree-sitter-wgsl-0.24" }
tree-sitter-markdown = { path = "../third_party/tree-sitter-markdown-0.24" }
