[package]
name = "cunning_viewport"
version = "0.1.0"
edition = "2021"

[features]
default = []
virtual_geometry_meshlet = []

[dependencies]
bevy = { path = "../../src/cunning_core/libs/3rd/bevy", default-features = false, features = ["3d", "bevy_sprite", "bevy_text"] }
bevy_egui = { path = "../../src/cunning_ui/crates/cunning_egui/crates/cunning_egui_bevy", default-features = false, features = ["default_fonts", "render"] }
egui-wgpu = { path = "../../src/cunning_ui/crates/cunning_egui/crates/egui-wgpu" }
egui_dock = { path = "../../src/cunning_ui/crates/cunning_egui/crates/cunning_egui_dock", features = ["serde"] }
cunning_overlay_widgets = { path = "../cunning_overlay_widgets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4", "v5", "serde", "js"] }
cunning_kernel = { package = "cunning_core", path = "../cunning_core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_anti_alias = { path = "../../src/cunning_core/libs/3rd/bevy/crates/bevy_anti_alias", default-features = false }
