[workspace]
resolver = "2"
members = [
    "clock",
    "collections",
    "gpui",
    "gpui_macros",
    "gpui_tokio",
    "http_client",
    "refineable",
    "refineable/derive_refineable",
    "rope",
    "scheduler",
    "sum_tree",
    "text",
    "util",
    "util_macros",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
# Internal crates
assets = { path = "assets" }
clock = { path = "clock" }
collections = { path = "collections" }
fs = { path = "fs" }
gpui = { path = "gpui", default-features = false }
gpui_macros = { path = "gpui_macros" }
gpui_tokio = { path = "gpui_tokio" }
http_client = { path = "http_client" }
media = { path = "media" }
paths = { path = "paths" }
refineable = { path = "refineable" }
derive_refineable = { path = "refineable/derive_refineable" }
release_channel = { path = "release_channel" }
reqwest_client = { path = "reqwest_client" }
rope = { path = "rope" }
scheduler = { path = "scheduler" }
sum_tree = { path = "sum_tree" }
text = { path = "text" }
util = { path = "util" }
util_macros = { path = "util_macros" }

# External crates (from Zed's workspace)
anyhow = "1.0.86"
ashpd = { version = "0.12.1", default-features = false, features = ["async-std"] }
blade-graphics = { git = "https://github.com/kvark/blade", rev = "e3cf011ca18a6dfd907d1dedd93e85e21f005fe3" }
blade-macros = { git = "https://github.com/kvark/blade", rev = "e3cf011ca18a6dfd907d1dedd93e85e21f005fe3" }
blade-util = { git = "https://github.com/kvark/blade", rev = "e3cf011ca18a6dfd907d1dedd93e85e21f005fe3" }
circular-buffer = "1.0"
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.4.3", features = ["metal"] }
inventory = "0.3.19"
mach2 = "0.5"
metal = "0.29"
naga = { version = "25.0", features = ["wgsl-in"] }
objc = "0.2"
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
stacksafe = "0.1"
windows-core = "0.61"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]
arrayvec = { version = "0.7.4", features = ["serde"] }
async-fs = "2.1"
async-lock = "2.1"
async-trait = "0.1"
backtrace = "0.3"
bitflags = "2.6.0"
chrono = { version = "0.4", features = ["serde"] }
ctor = "0.4.0"
derive_more = "0.99.17"
dirs = "4.0"
env_logger = "0.11"
futures = "0.3"
futures-lite = "1.13"
globset = "0.4"
heck = "0.5"
http = "1.1"
ignore = "0.4.22"
image = "0.25.1"
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.14.0"
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
parking_lot = "0.12.1"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
quote = "1.0.9"
rand = "0.9"
regex = "1.5"
rust-embed = { version = "8.4", features = ["include-exclude"] }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3", features = ["macros", "parsing", "serde", "serde-well-known", "formatting", "local-offset"] }
tokio = { version = "1" }
unicase = "2.6"
unicode-segmentation = "1.10"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"

# Reqwest (use standard version, not Zed's fork)
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
too_many_arguments = "allow"
