[package]
name = "gpui"
version = "0.2.2"
edition = "2024"
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "Zed's GPU-accelerated UI framework"
repository = "https://github.com/zed-industries/zed"
publish = true
license = "Apache-2.0"
homepage = "https://gpui.rs"
readme = "README.md"
keywords = ["desktop", "gui", "immediate"]
categories = ["gui"]

[features]
default = ["windows-manifest"]
test-support = [
    "leak-detection",
    "collections/test-support",
    "util/test-support",
    "http_client/test-support",
]
inspector = ["gpui_macros/inspector"]
leak-detection = ["backtrace"]
runtime_shaders = []
windows-manifest = []

[lib]
path = "src/gpui.rs"
doctest = false

[dependencies]
anyhow = "1.0.86"
async-task = "4.7"
backtrace = { version = "0.3", optional = true }
bitflags = { version = "2.6.0", optional = true }
bytemuck = { version = "1", optional = true }
collections = { path = "../collections" }
ctor = "0.4.0"
derive_more = "0.99.17"
etagere = "0.2"
futures = "0.3"
gpui_macros = { path = "../gpui_macros" }
http_client = { path = "../http_client" }
image = "0.25.1"
inventory = "0.3.19"
itertools = "0.14.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
num_cpus = "1.13"
parking = "2.0.0"
parking_lot = "0.12.1"
postage = { version = "0.5", features = ["futures-traits"] }
chrono = { version = "0.4", features = ["serde"] }
profiling = "1"
rand = "0.9"
raw-window-handle = "0.6"
refineable = { path = "../refineable" }
scheduler = { path = "../scheduler" }
resvg = { version = "0.45.0", default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
] }
usvg = { version = "0.45.0", default-features = false }
util_macros = { path = "../util_macros" }
schemars = { version = "1.0", features = ["indexmap2"] }
seahash = "4.1"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
sum_tree = { path = "../sum_tree" }
taffy = "=0.9.0"
thiserror = "2.0.12"
util = { path = "../util" }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
waker-fn = "1.2.0"
lyon = "1.0"
libc = "0.2"
pin-project = "1.1.10"
circular-buffer = "1.0"
spin = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
rand = "0.9"
windows = { version = "0.61", features = [
    "Foundation_Numerics",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"
windows-numerics = "0.2"
windows-registry = "0.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0"
windows-registry = "0.5"

[dev-dependencies]
backtrace = "0.3"
env_logger = "0.11"
lyon = { version = "1.0", features = ["extra"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
rand = "0.9"
unicode-segmentation = "1.10"
