[package]
name = "sum_tree"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"


[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
arrayvec = "0.7.1"
rayon = "1.8"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
tracing = "0.1.40"

[dev-dependencies]
ctor = "0.4.0"
rand = "0.9"

[package.metadata.cargo-machete]
ignored = ["tracing"]
