[package]
name = "text"
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0-or-later"


[lib]
path = "src/text.rs"
doctest = false

[features]
test-support = ["rand", "util/test-support"]

[dependencies]
anyhow = "1.0.86"
clock = { path = "../clock" }
collections = { path = "../collections" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
parking_lot = "0.12.1"
postage = { version = "0.5", features = ["futures-traits"] }
rand = { version = "0.9", optional = true }
regex = "1.5"
rope = { path = "../rope" }
smallvec = { version = "1.6", features = ["union", "const_new"] }
sum_tree = { path = "../sum_tree" }
util = { path = "../util" }

[dev-dependencies]
ctor = "0.4.0"
rand = "0.9"
