[package]
name = "bevy_egui"
version = "0.27.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
description = "A plugin for Egui integration into Bevy"
license = "MIT"
edition = "2021"
repository = "https://github.com/mvlabat/bevy_egui"
exclude = ["assets/**/*", ".github/**/*"]

[package.metadata.docs.rs]
features = ["bevy/x11"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["manage_clipboard", "open_url", "default_fonts", "render", "holes", "holes_cgui"]
immutable_ctx = []
manage_clipboard = ["arboard", "thread_local"]
open_url = ["webbrowser"]
default_fonts = ["egui/default_fonts"]
render = ["bevy/bevy_render", "dep:bevy_core_pipeline"]
serde = ["egui/serde"]
holes = ["bevy_ui"]
holes_cgui = ["holes", "bevy_cgui"]

[[example]]
name = "render_to_image_widget"
required-features = ["render"]
[[example]]
name = "side_panel"
required-features = ["render"]
[[example]]
name = "simple"
required-features = ["render"]
[[example]]
name = "two_windows"
required-features = ["render"]
[[example]]
name = "ui"
required-features = ["render"]

[dependencies]
bevy = { path = "../../../../../../src/cunning_core/libs/3rd/bevy", default-features = false, features = ["bevy_asset"] }
bevy_winit = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_winit", default-features = false }
bevy_image = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_image", default-features = false }
bevy_mesh = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_mesh", default-features = false }
bevy_input = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_input", default-features = false }
bevy_camera = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_camera", default-features = false }
bevy_window = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_window", default-features = false }
bevy_core_pipeline = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_core_pipeline", default-features = false, optional = true }
bevy_ui = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_ui", default-features = false, optional = true }
bevy_cgui = { path = "../../../../../../src/cunning_core/libs/3rd/bevy/crates/bevy_cgui", default-features = false, optional = true }
wgpu = "28.0.0"
bytemuck = "1"
uuid = "1"
egui = { path = "../egui", default-features = false, features = ["bytemuck"] }
egui-wgpu = { path = "../egui-wgpu", default-features = false }
webbrowser = { version = "0.8.2", optional = true }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
arboard = { version = "3.2.0", optional = true }
thread_local = { version = "1.1.0", optional = true }
winit = "0.30"

[dev-dependencies]
version-sync = "0.9.4"
bevy = { path = "../../../../../../src/cunning_core/libs/3rd/bevy", default-features = false, features = [
  "x11",
  "png",
  "bevy_pbr",
  "bevy_core_pipeline",
  "tonemapping_luts",
  "webgl2",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.29"
web-sys = { version = "0.3.63", features = [
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
    'Document',
    'EventTarget',
    "Window",
    "Navigator",
] }
js-sys = "0.3.63"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.36"
console_log = "1.0.0"
log = "0.4"
crossbeam-channel = "0.5.8"

[workspace]
members = ["run-wasm"]
