[package]
name = "epaint"
version.workspace = true
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Minimal 2D graphics library for GUI work"
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/emilk/egui/tree/master/crates/epaint"
license = "(MIT OR Apache-2.0) AND OFL-1.1 AND LicenseRef-UFL-1.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/crates/epaint"
categories = ["graphics", "gui"]
keywords = ["graphics", "gui", "egui"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml", "fonts/*.ttf", "fonts/*.txt", "fonts/OFL.txt", "fonts/UFL.txt"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]


[features]
default = ["default_fonts"]

## [`bytemuck`](https://docs.rs/bytemuck) enables you to cast [`Vertex`] to `&[u8]`.
bytemuck = ["dep:bytemuck", "emath/bytemuck", "ecolor/bytemuck"]

## [`cint`](https://docs.rs/cint) enables interoperability with other color libraries.
cint = ["ecolor/cint"]

## Enable the [`hex_color`] macro.
color-hex = ["ecolor/color-hex"]

## If set, epaint will use `include_bytes!` to bundle some fonts.
default_fonts = ["dep:epaint_default_fonts"]

## [`mint`](https://docs.rs/mint) enables interoperability with other math libraries.
mint = ["emath/mint"]

## Enable parallel tessellation using [`rayon`](https://docs.rs/rayon).
rayon = ["dep:rayon"]

## Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["dep:serde", "ahash/serde", "emath/serde", "ecolor/serde"]

## Extra assertions (0.33 feature parity).
extra_asserts = []
extra_debug_asserts = []

## Change Vertex layout to be compatible with unity
unity = []

## Override and disable the unity feature (for --all-features testing)
_override_unity = []

[dependencies]
emath.workspace = true
ecolor.workspace = true

ab_glyph.workspace = true
ahash.workspace = true
log.workspace = true
nohash-hasher.workspace = true
parking_lot.workspace = true
profiling.workspace = true

epaint_default_fonts = { workspace = true, optional = true }

#! ### Optional dependencies
bytemuck = { workspace = true, optional = true, features = ["derive"] }
document-features = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }


[dev-dependencies]
criterion.workspace = true


[[bench]]
name = "benchmark"
harness = false
